# monodromy

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  experiment.ipynb  setup.cfg  setup.py  usage.md
.github/workflows/: tests.yml
lrslib-073/: example.ine  makefile
monodromy/: depthPass.py
scripts/: qft.py
src/: bug.ipynb  experiment.ipynb
src/monodromy/: __init__.py  approximate.py  coordinates.py  coverage.py  depthPass.py  elimination.py  exceptions.py  haar.py  polynomials.py  polytopes.py  render.py  utilities.py  volume.py
src/monodromy/attic/: deflate.py  inflate.py  lrs_decompose.py  ordered.py  sample.py  unordered.py
src/monodromy/backend/: __init__.py  backend_abc.py  lrs.py
src/monodromy/io/: base.py  lrcalc.py
src/monodromy/static/: examples.py  interference.py  matrices.py  qlr_table.py
src/notebooks/: 02_approx.ipynb  03_asymptote.ipynb  approx.ipynb  bug.ipynb  experiment.ipynb
src/scripts/: approx_gateset.py  demo.py  gateset.py  nuop.py  proof.py  qft.py  single_circuit.py  xx_sequence.py
src/tests/: test_coordinates.py  test_elimination.py  test_haar.py  test_polynomials.py  test_polytopes.py  test_volume.py
