[metadata]
name = monodromy
description = Computations in the monodromy polytope for quantum gate sets
version = 0.0.1
author = Eric Peterson
author_email = Eric.Peterson@ibm.com

[options]
python_requires = >=3.9
install_requires =
    pytest
    scipy
    qiskit
    qiskit-terra
    retworkx
    numpy
    cvxopt
    # numba

[options.extras_require]
dev =
    matplotlib
    ipykernel
    pre-commit
    pylatexenc
    weylchamber
    Py-BOBYQA

format =
    pre-commit
    black[jupyter]
    isort
    tomli
    pydocstyle
    ruff
    docformatter[tomli]
test =
    pytest
    ddt
