[metadata]
name = monodromy
description = Computations in the monodromy polytope for quantum gate sets
version = 0.0.1
author = Eric Peterson
author_email = Eric.Peterson@ibm.com

[options]
python_requires = >=3.9
# install_requires =
#     pytest
#     scipy
#     qiskit #~=0.43.3
#     # qiskit-terra~=0.24.2
#     retworkx
#     numpy
#     cvxopt
#     # numba

[options.extras_require]
dev =
    matplotlib
    ipykernel
    pre-commit
    pylatexenc
    weylchamber
    Py-BOBYQA
    transpile_benchy @ git+https://github.com/evmckinney9/transpile_benchy.git

format =
    pre-commit
    black[jupyter]
    isort
    tomli
    pydocstyle
    ruff
    docformatter[tomli]
test =
    pytest
    ddt
